MinGW Fixes: libdl, libzlib, libgsl, libreadline, libQt (but not SoQt); maketa paths now fully absolute; define TA_OS_WIN, CYGWIN; 'make dist' source works

--- a/config.h.in
+++ b/config.h.in
@@ -5,7 +5,7 @@
    */
 #undef CRAY_STACKSEG_END
 
-/* When on cygwin */
+/* When on cygwin,mingw */
 #undef CYGWIN
 
 /* Define to 1 if using `alloca.c'. */
@@ -239,6 +239,9 @@
 /* Set when building nogui */
 #undef TA_NO_GUI
 
+/* When on win */
+#undef TA_OS_WIN
+
 /* This switch is set when compiling for gui and linking with Coin. This
    switch is really only used in the lowest level files. NOTE: Coin/Inventor
    is never used when building nogui. */
@@ -262,7 +265,7 @@
 /* blah */
 #undef WHEREAMI
 
-/* When on cygwin */
+/* When on win? */
 #undef WIN32
 
 /* Define to 1 if `lex' declares `yytext' as a `char *' by default, not a
