--- a/Maketa.am
+++ b/Maketa.am
@@ -38,20 +38,21 @@ MAKETA_FLAGS =\
 	-hx \
 	-css \
 	-cpp="@CXXCPP@" \
-	-I@abs_top_builddir@ \
-	-I@abs_srcdir@ \
-	-I@abs_srcdir@/../ta/ios-g++-3.1 \
-	-I@abs_srcdir@/../ta \
-	-I@abs_srcdir@/../pdp \
-	-I@abs_srcdir@/../css \
-	-I@abs_srcdir@/../leabra \
-	-I@abs_srcdir@/../taiqtso \
-	-I@abs_srcdir@/../bp \
-	-I/usr/include/qt4/Qt \
-	-I${QTDIR}/include/QtCore \
-	${MAKETA_XXFLAGS}
+	-I@abs_top_srcdir@ \
+	-I@abs_top_srcdir@/src/ta/ios-g++-3.1 \
+	-I@abs_top_srcdir@/src/ta \
+	-I@abs_top_srcdir@/src/pdp \
+	-I@abs_top_srcdir@/src/css \
+	-I@abs_top_srcdir@/src/leabra \
+	-I@abs_top_srcdir@/src/taiqtso \
+	-I@abs_top_srcdir@/src/bp \
+	-I${QTDIR}/include/QtCore
+
 
 # TODO: Fix above hacky includes
+# TODO: Is this include still needed?
+#	-I/usr/include/qt4/Qt \
+# 	${MAKETA_XXFLAGS}
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
 
