--- a/Makefile.in
+++ b/Makefile.in
@@ -273,8 +273,7 @@ SUBDIRS = \
 	src/pdp_bin \
 	prog_lib \
 	css_stdlib \
-	test \
-	manual
+	test
 
 @RPM_TRUE@DISTCLEANFILES = \
 @RPM_TRUE@	aminclude.am \
