--- a/src/maketa/Makefile.in
+++ b/src/maketa/Makefile.in
@@ -99,6 +99,8 @@ AX_RPM_SPEC_FILE = @AX_RPM_SPEC_FILE@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CL_FALSE = @CL_FALSE@
+CL_TRUE = @CL_TRUE@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSS_BIN_FALSE = @CSS_BIN_FALSE@
@@ -108,6 +110,10 @@ CXXCPP = @CXXCPP@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
+CYGWIN_FALSE = @CYGWIN_FALSE@
+CYGWIN_TRUE = @CYGWIN_TRUE@
+DARWIN_FALSE = @DARWIN_FALSE@
+DARWIN_TRUE = @DARWIN_TRUE@
 DEBUG_FALSE = @DEBUG_FALSE@
 DEBUG_TRUE = @DEBUG_TRUE@
 DEFS = @NOOP_MAKETA@
@@ -119,6 +125,8 @@ ECHO_T = @ECHO_T@
 EDITOR = @EDITOR@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+GCC_FALSE = @GCC_FALSE@
+GCC_TRUE = @GCC_TRUE@
 GREP = @GREP@
 HAVE_SVN = @HAVE_SVN@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
@@ -142,10 +150,14 @@ LIBTA_TRUE = @LIBTA_TRUE@
 LIBTOOL = @LIBTOOL@
 LIB_VERSION = @LIB_VERSION@
 LIB_VERSION_2 = @LIB_VERSION_2@
+LINUX_FALSE = @LINUX_FALSE@
+LINUX_TRUE = @LINUX_TRUE@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MAKETA_OPT = @MAKETA_OPT@
+MINGW32_FALSE = @MINGW32_FALSE@
+MINGW32_TRUE = @MINGW32_TRUE@
 MPICXX = @MPICXX@
 MPI_FALSE = @MPI_FALSE@
 MPI_TRUE = @MPI_TRUE@
@@ -154,6 +166,8 @@ NO_TA_GUI_FALSE = @NO_TA_GUI_FALSE@
 NO_TA_GUI_TRUE = @NO_TA_GUI_TRUE@
 OBJEXT = @OBJEXT@
 OPT_LEVEL = @OPT_LEVEL@
+OTHER_COMPILER_FALSE = @OTHER_COMPILER_FALSE@
+OTHER_COMPILER_TRUE = @OTHER_COMPILER_TRUE@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
@@ -184,6 +198,8 @@ WANT_CSS_BIN = @WANT_CSS_BIN@
 WANT_LIBTA = @WANT_LIBTA@
 WANT_TAIQTSO = @WANT_TAIQTSO@
 WHEREAMI = @WHEREAMI@
+WINDOWS_FALSE = @WINDOWS_FALSE@
+WINDOWS_TRUE = @WINDOWS_TRUE@
 YACC = @YACC@
 YFLAGS = @YFLAGS@
 abs_srcdir = @abs_srcdir@
