--- a/src/css/Makefile.in
+++ b/src/css/Makefile.in
@@ -53,10 +53,10 @@ am__libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES_DIST =  \
 	css_console.cpp css_console.moc.cpp css_parse.cpp \
 	css_machine.cpp css_machine.moc.cpp css_basic_types.cpp \
 	css_c_ptr_types.cpp css_builtin.cpp css_lex.cpp css_ta.cpp \
-	xmemory.cpp css_misc_funs.cpp css_qtconsole.cpp \
-	css_qtconsole.moc.cpp css_qttype.cpp css_qttype.moc.cpp \
-	css_qt.cpp css_qtdata.cpp css_qtdata.moc.cpp css_qtdialog.cpp \
-	css_ti.cpp
+	xmemory.cpp css_misc_funs.cpp readline_win.cpp \
+	css_qtconsole.cpp css_qtconsole.moc.cpp css_qttype.cpp \
+	css_qttype.moc.cpp css_qt.cpp css_qtdata.cpp \
+	css_qtdata.moc.cpp css_qtdialog.cpp css_ti.cpp
 am__objects_1 =
 am__objects_2 = $(am__objects_1)
 @TA_GUI_TRUE@am__objects_3 = libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qtconsole.lo \
@@ -80,6 +80,7 @@ am__objects_4 =  \
 	libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_ta.lo \
 	libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-xmemory.lo \
 	libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_misc_funs.lo \
+	libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo \
 	$(am__objects_3) \
 	libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_ti.lo
 am_libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_OBJECTS = $(am__objects_2) \
@@ -157,7 +158,6 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GCC_FALSE = @GCC_FALSE@
 GCC_TRUE = @GCC_TRUE@
-GREP = @GREP@
 HAVE_SVN = @HAVE_SVN@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
 INC_AMINCLUDE = @INC_AMINCLUDE@
@@ -227,11 +227,13 @@ WHEREAMI = @WHEREAMI@
 WINDOWS_FALSE = @WINDOWS_FALSE@
 WINDOWS_TRUE = @WINDOWS_TRUE@
 YACC = @YACC@
-YFLAGS = @YFLAGS@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
+ac_ct_RANLIB = @ac_ct_RANLIB@
+ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -248,31 +250,24 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
-datarootdir = @datarootdir@
-docdir = @docdir@
-dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
-htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
-localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
-pdfdir = @pdfdir@
 pdpexists = @pdpexists@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
-psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sim_ac_qt_cygpath = @sim_ac_qt_cygpath@
@@ -407,6 +402,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qttype.moc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_ta.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_ti.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-xmemory.Plo@am__quote@
 
 .cpp.o:
@@ -513,6 +509,13 @@ libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_misc_funs.lo: css_misc_funs.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='css_misc_funs.cpp' object='libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_misc_funs.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS) $(CPPFLAGS) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS) $(CXXFLAGS) -c -o libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_misc_funs.lo `test -f 'css_misc_funs.cpp' || echo '$(srcdir)/'`css_misc_funs.cpp
+
+libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo: readline_win.cpp
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS) $(CPPFLAGS) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS) $(CXXFLAGS) -MT libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo -MD -MP -MF "$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.Tpo" -c -o libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo `test -f 'readline_win.cpp' || echo '$(srcdir)/'`readline_win.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.Tpo" "$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.Plo"; else rm -f "$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='readline_win.cpp' object='libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS) $(CPPFLAGS) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS) $(CXXFLAGS) -c -o libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-readline_win.lo `test -f 'readline_win.cpp' || echo '$(srcdir)/'`readline_win.cpp
 
 libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qtconsole.lo: css_qtconsole.cpp
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS) $(CPPFLAGS) $(libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS) $(CXXFLAGS) -MT libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qtconsole.lo -MD -MP -MF "$(DEPDIR)/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qtconsole.Tpo" -c -o libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la-css_qtconsole.lo `test -f 'css_qtconsole.cpp' || echo '$(srcdir)/'`css_qtconsole.cpp; \
