Add custom make target for taiqtso/interceptor.moc.cpp and add a check for libode

--- a/config.h.in
+++ b/config.h.in
@@ -67,6 +67,9 @@
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
+/* Define to 1 if you have the `ode' library (-lode). */
+#undef HAVE_LIBODE
+
 /* Define to 1 if you have the `termcap' library (-ltermcap). */
 #undef HAVE_LIBTERMCAP
 
