--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -247,6 +247,9 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
+interceptor.moc.cpp:
+	$(QT_MOC) -o irenderarea.moc.cpp -I@abs_top_builddir@ -I@abs_top_builddir@/src/ta interceptor.h
+
 noinst_LTLIBRARIES =\
 	libta@PDP_SUFFIX@_@PACKAGE_VERSION@.la \
 	libtaTypeAccess@PDP_SUFFIX@_@PACKAGE_VERSION@.la
