--- a/src/ta/Makefile.in
+++ b/src/ta/Makefile.in
@@ -1558,6 +1558,9 @@ do-mfstamp-am do-mfstamp: Makefile.in
 	@echo "timestamp for all Makefile.in files" > $(top_builddir)/mfstamp
 	@touch $@
 
+interceptor.moc.cpp:
+	$(QT_MOC) -o irenderarea.moc.cpp -I@abs_top_builddir@ -I@abs_top_builddir@/src/ta interceptor.h
+
 taglobal.h ta_maketa_defs.h qtdefs.h:
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
