--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -58,6 +58,9 @@ HEADS =\
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
+css_qtconsole.moc.cpp:
+	$(QT_MOC) -o css_qtconsole.moc.cpp -I@abs_top_builddir@ -I@abs_top_builddir@/src/css css_qtconsole.h
+
 make_css_parse:
 	bison -dtvy css_parse.y;
 	sed -e "s/union/struct/g" y.tab.c >css_parse.cpp;
