--- a/src/css/Makefile.in
+++ b/src/css/Makefile.in
@@ -774,7 +774,7 @@ do-mfstamp-am do-mfstamp: Makefile.in
 	@touch $@
 
 css_qtconsole.moc.cpp:
-	$(QT_MOC) -o css_qtconsole.moc.cpp -I@abs_top_builddir@ -I@abs_top_builddir@/src/css css_qtconsole.h
+	$(QT_MOC) -o css_qtconsole.moc.cpp -I@abs_top_builddir@ -I@abs_top_builddir@/src/css -I@abs_top_builddir@/src/ta css_qtconsole.h
 
 make_css_parse:
 	bison -dtvy css_parse.y;
