--- a/src/ta_lib/Makefile.am
+++ b/src/ta_lib/Makefile.am
@@ -2,9 +2,12 @@ include $(top_srcdir)/mfstamp.am
 
 lib_LTLIBRARIES = libtacss@PDP_SUFFIX@-@PACKAGE_VERSION@.la
 
+libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LDFLAGS = -version-info @LIB_VERSION@
+
+# this breaks linking on mac!!!!
 # See http://www.nabble.com/warning-with-the-linker:-undefined-symbols-t2904530.html
 # for infor on -no-undefied
-libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LDFLAGS = -version-info @LIB_VERSION@ -no-undefined
+#libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LDFLAGS = -version-info @LIB_VERSION@ -no-undefined
 
 libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES =
 
