--- a/src/pdp_lib/Makefile.am
+++ b/src/pdp_lib/Makefile.am
@@ -1,7 +1,7 @@
 include $(top_srcdir)/mfstamp.am
 
 lib_LTLIBRARIES = libpdp@PDP_SUFFIX@-@PACKAGE_VERSION@.la
-libpdp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LDFLAGS = -version-info @LIB_VERSION@ -no-undefined
+libpdp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LDFLAGS = -version-info @LIB_VERSION@
 
 libpdp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES =
 
