--- a/src/ta/Makefile.in
+++ b/src/ta/Makefile.in
@@ -368,7 +368,7 @@ program_transform_name = @program_transform_name@
 psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
-sim_ac_qt_cygpath = @sim_ac_qt_cygpath@
+sim_ac_simage_configcmd = @sim_ac_simage_configcmd@
 sim_ac_soqt_configcmd = @sim_ac_soqt_configcmd@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
