--- a/src/leabra/Makefile.in
+++ b/src/leabra/Makefile.in
@@ -132,6 +132,7 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GCC_FALSE = @GCC_FALSE@
 GCC_TRUE = @GCC_TRUE@
+GENDOC = @GENDOC@
 GREP = @GREP@
 HAVE_SVN = @HAVE_SVN@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
@@ -647,7 +648,7 @@ uninstall-am: uninstall-info-am
 	uninstall-info-am
 
 ${PROJNAME}_TA.ccx: ${TAHEADS}
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
 
 ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	@if test -f $@; then \
@@ -664,13 +665,13 @@ ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	cmp $@ $< || cp $< $@
 
 force_ta:
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
 	cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h; \
 	cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h; \
 	cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp
 
 do_ta:
-	${MAKETA} ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
 do-mfstamp-am do-mfstamp: Makefile.in
 	@echo "timestamp for all Makefile.in files" > $(top_builddir)/mfstamp
 	@touch $@
