--- a/src/ta/Makefile.in
+++ b/src/ta/Makefile.in
@@ -250,6 +250,7 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GCC_FALSE = @GCC_FALSE@
 GCC_TRUE = @GCC_TRUE@
+GENDOC = @GENDOC@
 GREP = @GREP@
 HAVE_SVN = @HAVE_SVN@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
@@ -1585,7 +1586,7 @@ uninstall-am: uninstall-info-am
 	tags uninstall uninstall-am uninstall-info-am
 
 ${PROJNAME}_TA.ccx: ${TAHEADS}
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
 
 ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	@if test -f $@; then \
@@ -1602,13 +1603,13 @@ ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	cmp $@ $< || cp $< $@
 
 force_ta:
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
 	cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h; \
 	cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h; \
 	cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp
 
 do_ta:
-	${MAKETA} ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
 
 .h.moc.cpp:
 	$(QT_MOC) -o $@ $<
