backprop updated and working, bp_xor.proj is demo test case

--- a/prog_lib/Makefile.am
+++ b/prog_lib/Makefile.am
@@ -19,4 +19,12 @@ dist_pkgdata_prog_lib_DATA =\
 	ReadImages.prog \
 	LeabraTrainBatchSeedList.prog \
 	LeabraTrainBatchSeedNThr.prog \
-	MultiInputData.prog
+	MultiInputData.prog \
+	BpAll_Std.progp \
+	BpBatch.prog \
+	BpEpoch.prog \
+	BpEpochMonitor.prog \
+	BpTestAll.progp \
+	BpTrain.prog \
+	BpTrial.prog \
+	BpTrialMonitor.prog
