--- a/Maketa.am
+++ b/Maketa.am
@@ -16,8 +16,11 @@ ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 .ccx.cpp:
 	cmp $@ $< || cp $< $@
 
+gendoc:
+	${MAKETA} -gendoc ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS};
+
 force_ta:
-	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
+	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
 	cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h; \
 	cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h; \
 	cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp
